--- a/Module5/Module5 - Lab5.ipynb
+++ b/Module5/Module5 - Lab5.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -105,13 +105,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>area</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>compactness</th>\n",
+       "      <th>length</th>\n",
+       "      <th>width</th>\n",
+       "      <th>asymmetry</th>\n",
+       "      <th>groove</th>\n",
+       "      <th>wheat_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15.26</td>\n",
+       "      <td>14.84</td>\n",
+       "      <td>0.8710</td>\n",
+       "      <td>5.763</td>\n",
+       "      <td>3.312</td>\n",
+       "      <td>2.221</td>\n",
+       "      <td>5.220</td>\n",
+       "      <td>kama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>14.88</td>\n",
+       "      <td>14.57</td>\n",
+       "      <td>0.8811</td>\n",
+       "      <td>5.554</td>\n",
+       "      <td>3.333</td>\n",
+       "      <td>1.018</td>\n",
+       "      <td>4.956</td>\n",
+       "      <td>kama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>14.29</td>\n",
+       "      <td>14.09</td>\n",
+       "      <td>0.9050</td>\n",
+       "      <td>5.291</td>\n",
+       "      <td>3.337</td>\n",
+       "      <td>2.699</td>\n",
+       "      <td>4.825</td>\n",
+       "      <td>kama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>13.84</td>\n",
+       "      <td>13.94</td>\n",
+       "      <td>0.8955</td>\n",
+       "      <td>5.324</td>\n",
+       "      <td>3.379</td>\n",
+       "      <td>2.259</td>\n",
+       "      <td>4.805</td>\n",
+       "      <td>kama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>16.14</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>0.9034</td>\n",
+       "      <td>5.658</td>\n",
+       "      <td>3.562</td>\n",
+       "      <td>1.355</td>\n",
+       "      <td>5.175</td>\n",
+       "      <td>kama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   area  perimeter  compactness  length  width  asymmetry  groove  \\\n",
+       "0   0  15.26      14.84       0.8710   5.763  3.312      2.221   5.220   \n",
+       "1   1  14.88      14.57       0.8811   5.554  3.333      1.018   4.956   \n",
+       "2   2  14.29      14.09       0.9050   5.291  3.337      2.699   4.825   \n",
+       "3   3  13.84      13.94       0.8955   5.324  3.379      2.259   4.805   \n",
+       "4   4  16.14      14.99       0.9034   5.658  3.562      1.355   5.175   \n",
+       "\n",
+       "  wheat_type  \n",
+       "0       kama  \n",
+       "1       kama  \n",
+       "2       kama  \n",
+       "3       kama  \n",
+       "4       kama  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "X = pd.read_csv('./Datasets/wheat.data')\n",
+    "X.head()"
    ]
   },
   {
@@ -123,13 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "y = X.wheat_type\n",
+    "X.drop(labels=['id','wheat_type'], axis = 1, inplace = True)"
    ]
   },
   {
@@ -149,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "y = y.astype('category').cat.codes"
    ]
   },
   {
@@ -161,13 +268,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id             0\n",
+      "area           0\n",
+      "perimeter      0\n",
+      "compactness    0\n",
+      "length         0\n",
+      "width          0\n",
+      "asymmetry      0\n",
+      "groove         0\n",
+      "wheat_type     0\n",
+      "dtype: int64\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "X.compactness.fillna(X.compactness.mean(), inplace = True)\n",
+    "X.width.fillna(X.width.mean(), inplace = True)\n",
+    "X.groove.fillna(X.groove.mean(), inplace = True)\n",
+    "print (X.isnull().sum()) # No more missing values!\n",
+    "print (y.isnull().sum()) # Has no missing values"
    ]
   },
   {
@@ -179,13 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "from sklearn.cross_validation import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.33, random_state = 1)"
    ]
   },
   {
@@ -197,13 +327,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'kama'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-2f83ec55ebde>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNormalizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mC:\\Users\\SCarranza\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\data.py\u001b[0m in \u001b[0;36mnormalize\u001b[0;34m(X, norm, axis, copy, return_norm)\u001b[0m\n\u001b[1;32m   1342\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1343\u001b[0m     X = check_array(X, sparse_format, copy=copy, warn_on_dtype=True,\n\u001b[0;32m-> 1344\u001b[0;31m                     estimator='the normalize function', dtype=FLOAT_DTYPES)\n\u001b[0m\u001b[1;32m   1345\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0maxis\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m   1346\u001b[0m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\SCarranza\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    380\u001b[0m                                       force_all_finite)\n\u001b[1;32m    381\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 382\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morder\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    383\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'kama'"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "from sklearn import preprocessing\n",
+    "n = Normalizer()\n",
+    "T = preprocessing.normalize(X_train)"
    ]
   },
   {
@@ -237,13 +383,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'T' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-6b95503b983e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecomposition\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpca\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_components\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpca_X\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpca\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'T' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components = 2)\n",
+    "pca_X = pca.fit_transform(T)"
    ]
   },
   {
@@ -347,7 +507,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   },
   "toc": {
    "colors": {
