--- a/Module5/Module5 - Lab10.ipynb
+++ b/Module5/Module5 - Lab10.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -109,13 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "zero = []\n",
+    "\n"
    ]
   },
   {
@@ -127,13 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "import os\n",
+    "for file in os.listdir('./Datasets/recordings'):\n",
+    "    if file.startswith('0_jackson'):\n",
+    "        a = os.path.join('./Datasets/recordings', file)\n",
+    "        sample_rate, audio_data = wavfile.read(a)\n",
+    "        zero.append(audio_data)\n",
+    "print (len(zero)) # 50, as expected since there 50 files in the folder starting with \"0_jackson\""
    ]
   },
   {
@@ -149,13 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "zero = pd.DataFrame(data = zero, dtype = np.int16)\n",
+    "zero.dropna(axis = 1, inplace = True)\n",
+    "zero = zero.values\n",
+    "print (type(zero))"
    ]
   },
   {
@@ -169,13 +195,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50, 4087)\n"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "print(zero.shape)\n",
+    "n_audio_samples = zero.shape[1]"
    ]
   },
   {
@@ -187,13 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "from sklearn import linear_model\n",
+    "model = linear_model.LinearRegression()"
    ]
   },
   {
@@ -205,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -232,13 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapes of train and test, respectively: (49, 4087) (4087,)\n",
+      "<class 'numpy.ndarray'> <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "print (\"Shapes of train and test, respectively:\", train.shape, test.shape)\n",
+    "print (type(train), type(test))"
    ]
   },
   {
@@ -258,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -276,13 +322,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "X_test = test[:int(Provided_Portion*n_audio_samples)]"
    ]
   },
   {
@@ -296,13 +342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "y_test = test[int(Provided_Portion*n_audio_samples):]"
    ]
   },
   {
@@ -317,13 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "X_train = train[:, :int(Provided_Portion*n_audio_samples)]\n",
+    "y_train = train[:, int(Provided_Portion*n_audio_samples):]"
    ]
   },
   {
@@ -341,13 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "X_test = X_test.reshape(1, -1)\n",
+    "y_test = y_test.reshape(1, -1)"
    ]
   },
   {
@@ -359,13 +407,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# .. your code here .."
+    "model.fit(X_train, y_train)"
    ]
   },
   {
@@ -377,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "y_test_prediction = model.predict(X_test)"
    ]
   },
   {
@@ -395,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -413,22 +472,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# .. your code here .."
+    "score = model.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extrapolation R^2 Score:  1.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Extrapolation R^2 Score: \", score)"
    ]
@@ -442,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +539,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   },
   "toc": {
    "colors": {
